# python-cicd

./: .gitignore  .pre-commit-config.yaml  noxfile.py  pyproject.toml
.github/workflows/: ci.yaml
ci_cd/: math.py
tests/: test_math.py
