[tool.poetry]
name = "ci-cd"
version = "0.1.0"
description = ""
authors = ["Warren Sadler <warrendsadler@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.4.1"
coverage = { extras = ["toml"], version = "^7.5.0" }
pre-commit = "^3.7.0"
mypy = "^1.9.0"


[tool.coverage.report]
fail_under = 100


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
